RE #75: - Added 6 new icons including book-open and status - Moved all custom variables into new file inside admin-ui apps folder - Defined 8 levels of drop shadow and replaced old instances - Card-header in sidebar no longer has drop shadow since sticky by default removed - Text-muted and text-light fine tuned - Badge vertically aligned in middle, tested badge with icons - Icon vertically aligned using margins - Styled img-thumbnail for possible use - Tons of fine tuning

--- a/src/components/alert/styles.scss
+++ b/src/components/alert/styles.scss
@@ -14,6 +14,10 @@
   box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
   text-align: center;
 
+  .table & {
+    box-shadow: none;
+  }
+
   .card-body > & {
     @include border-radius($alert-border-radius);
   }
@@ -27,7 +31,7 @@
 
   .alert-container & {
     @include border-radius($alert-border-radius);
-    box-shadow: $shadow-depth4;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.0625), $shadow-depth7;
   }
 
   & span::before {
